travis mem heap fix