@@ -17,6 +17,7 @@ object BuildSettings {
     scalaVersion := "2.10.0",
     crossScalaVersions := Seq("2.10.0"),
     crossVersion := CrossVersion.binary,
+    javaOptions in test ++= Seq("-Xmx512m", "-XX:MaxPermSize=512m"),
     scalacOptions ++= Seq("-unchecked", "-deprecation" /*, "-Xlog-implicits", "-Yinfer-debug", "-Xprint:typer", "-Yinfer-debug", "-Xlog-implicits", "-Xprint:typer"*/ ),
     scalacOptions in (Compile, doc) ++= Seq("-unchecked", "-deprecation", "-diagrams", "-implicits"),
     shellPrompt := ShellPrompt.buildShellPrompt,
